0.3.1-dev:
* Bump config revision to 5.
[CLIENT]
+ Add JAR repacking functionality.
+ Add minecraft.jar downloading functionality (also caches them AsieLauncher-wide).
+ Checks for modpack MC version and quits if unsupported.
/ Refactoring...
[SERVER]
+ Now sends list of ZIPs to add to minecraft.jar.
* Moved client_revision to also.js.

0.3.0:
* Bump config revision to 4.
[CLIENT]
+ Modify and/or generate servers.dat based on data sent from the server to the client.
* Show proper changelog filesize.
* Fix launching while internet is down.
/ Code refactoring, somewhat.
[SERVER]
+ Send a serverlist to the client.
* Fixed the whole code after accidentally moving files to AsieLauncher/ wrong.
/ Move onlineMode option from client to server. Makes more sense that way.

0.2.5:
[CLIENT]
+ Add changelog.
+ Add "Launch Only" option while holding Control.
* Fix options GUI look.
[SERVER]
/ Move files to AsieLauncher/, mostly.

0.2.4:
[CLIENT]
+ Add support for Mojang authentication.
+ Add config.json for recompile-less branding.
* Fix a bug where too long JVM arguments would make the Options GUI impossibly long.

0.2.3:
* Bump config revision to 3.
[CLIENT]
* Fix regression from 0.2.2 where running from a shell in Linux/OS X would not work.
* Fix ZIPs with overwrite set to "false" stopping the installation process.
[SERVER]
+ Support a "root" folder, which is essentially /

0.2.2:
[CLIENT]
* Fix Windows bugs from 0.2. Really.

0.2.1:
[CLIENT]
* Fix Windows bugs from 0.2.

0.2:
[CLIENT]
+ Add an options menu with the ability to change the JVM args and amount of RAM allocated.
+ Add support for optional components client-side.
+ Added support for Retina displays. (Apple-only for now, still needs information in Info.plist)
+ If possible, the client now launches a separate JVM instance, fixing the lag issues from 0.1.
[BOTH]
+ Add "client_revision" for marking the JSON data format revision.
+ Added support for not overwriting files for specific directories, files or ZIPs.

0.1: