@@ -7,6 +7,7 @@
 / Refactoring...
 [SERVER]
 + Now sends list of ZIPs to add to minecraft.jar.
++ Sends MC version of the modpack to client.
 * Moved client_revision to also.js.
 
 0.3.0:
